--- a/vite-project/src/components/Header.css
+++ b/vite-project/src/components/Header.css
@@ -1,33 +1,96 @@
 .header {
-background-color: #1b1f23;
-padding: 1rem 2rem;
-color: #ffffff;
-}
-
-.header-content {
-display: flex;
-justify-content: space-between;
-align-items: center;
-max-width: 1200px;
-margin: 0 auto;
-}
-
-.header-title {
-font-size: 1.5rem;
-margin: 0;
-}
-
-.header-nav {
-display: flex;
-gap: 1rem;
-}
-
-.nav-link {
-color: #7e96b1;
-text-decoration: none;
-transition: color 0.3s;
-}
-
-.nav-link:hover {
-color: #66c0f4;
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background-color: #1b1f23;
+    padding: 0.5rem;
+  }
+  
+  .header > div {
+    max-width: 1200px;
+    margin: 0 auto;
+    background-image: linear-gradient(90deg, rgba(123, 20, 255, 0.09) 2%, rgba(160, 46, 214, 0.26) 27%, rgba(181, 5, 249, 0.04) 80%);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    display: flex;
+    align-items: center; 
+  }
+  
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+  }
+  
+  .header-title {
+    color: #66c0f4;
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+  }
+  
+  .nav-toggle {
+    display: none; 
+    background: none;
+    border: none;
+    color: #66c0f4;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  
+  .header-nav {
+    display: flex;
+    align-items: center;
+    transition: height 0.9s ease-in-out;
+    height: auto;
+  }
+  
+  .nav-link {
+    color: #66c0f4;
+    text-decoration: none;
+    transition: color 0.3s;
+    padding: 0.5rem 1rem;
+  }
+  
+  .nav-link:hover {
+    color: #66c0f4;
+  }
+  
+  @media (max-width: 768px) {
+    .nav-toggle {
+      display: block;
+    }
+  
+    .header-nav {
+      height: 0; 
+      overflow: hidden;
+      flex-direction: column;
+      position: absolute;
+      top: 88%;
+      left: 0.5rem;
+      right: 0.5rem;
+      background-color: rgb(25 32 35 / var(--tw-bg-opacity));
+      background-image: linear-gradient(90deg, rgba(26, 28, 62, 0.09) 2%, rgba(46, 46, 214, 0.26) 27%, rgba(20, 30, 48, 0.04) 80%);
+      border-top: none;
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+      transition: height 0.05s ease-in-out;
+    }
+  
+    .header-nav.show {
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      height: auto; 
+      transition: height 0.2s ease-in-out;
+    }
+  }
+  
+  @media (min-width: 769px) {
+    .header-nav {
+      display: flex;
+    }
+  }
+  
